--- a/CSSSelector.css
+++ b/CSSSelector.css
@@ -4,9 +4,11 @@
     height: 10%;
     border-radius: 0px 100% 0 0px;
     box-shadow: 0px 10px red;
+    text-shadow: 2px 2px lightgreen;
 }
 #dvLeft{
-    background-color: lightblue;
+    background-image: radial-gradient(lightgreen,lightblue,red);
+    width: 100%;
     width: 30%;
     height: 70%;
     float: left;
@@ -22,9 +24,19 @@
     box-shadow: 0px -10px red;
 }
 #dvBottom{
-    background-color: lightgreen;
+    background-image: linear-gradient(red, lightgreen,lightblue);
     width: 100%;
     height: 20%;
     float: left;
     border-radius: 0 100%;
+}
+
+.tabletext{
+    background-color: rgb(87, 6, 218);
+    color: white;
+}
+
+.menu{
+    background-image: conic-gradient(red, lightgreen,lightblue);
+    color: white;
 }
